Version 4004.0.9: release 2009-

 * Export headerMap from Network.HTTP.Headers
   (suggested by David Leuschner.)
 * Fix Network.TCP.{isTCPConnectedTo,isConnectedTo} to be useful.

Version 4004.0.8: release 2009-08-05

 * Incorporated proxy setting lookup and parsing contribution
   by Eric Kow; provided in Network.HTTP.Proxy
 * Factor out HTTP Cookies and Auth handling into separate
   modules Network.HTTP.Cookie, Network.HTTP.Auth
 * new Network.Browser functionality for hooking up the
   proxy detection code in Network.HTTP.Proxy:

      setCheckForProxy :: Bool -> BrowserAction t ()
      getCheckForProxy :: BrowserAction t Bool

   If you do 'setCheckForProxy True' within a browser
   session, the proxy-checking code will be called upon.
   Use 'getCheckForProxy' to get the current setting for
   this flag.

 * Network.Browser: if HTTP Basic Auth is allowed and
   server doesn't 401-challenge with an WWW-Authenticate:
   header, simply assume / realm and proceed. Preferable
   than failing, even if server is the wrong.

Version 4004.0.7: release 2009-05-22

 * Minor release.
 * Added 
     Network.TCP.openSocketStream :: (BufferType t)
                                  => String {-host-}
				  -> Socket
				  -> IO (HandleStream t)

   for interfacing to pre-existing @Socket@s. Contributed and
   suggested by <http://trac.haskell.org/http/ticket/7>.

Version 4004.0.6: release 2009-04-21; changes from 4004.0.5

 * Network.Browser: use HTTP.HandleStream.sendHTTP_notify, not HTTP.sendHTTP_notify
   when issuing requests. The latter runs the risk of undoing request normalization.
 * Network.HTTP.Base.normalizeRequest: when normalizing proxy-bound requests,
   insert a Host: header if none present. Set it to the destination server authority,
   not the proxy.
 * Network.Browser: don't fail on seeing invalid cookie values, but report them
   as errors and continue.

Version 4004.0.5: release 2009-03-30; changes from 4004.0.4
